# qr-cli

./: Cargo.toml  readme.md
src/: cli.rs  daemon.rs  generate.rs  main.rs
