[package]
name = "qr-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = {version = "3.3.0", features = ["wayland-data-control"]}
clap = { version = "4.0", features = ["derive"] }
image = "0.24.7"
qrcode = "0.13.0"
strum_macros = "0.25.3"
